{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Camera",
            "id": "baeaf80e-92b5-493b-9f9d-1a2cd7843e64",
            "actions": [
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "f200cd3c-131a-4a13-a506-31e3f2bf7bca",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press,Tap",
                    "initialStateCheck": true
                },
                {
                    "name": "Zoom",
                    "type": "Value",
                    "id": "5f4c026a-ae15-4fb2-91e4-40166ee664fd",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Rotation Modifier",
                    "type": "Button",
                    "id": "e4feac6d-4462-48b7-84b1-eea4a0f356b6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pan Modifier",
                    "type": "Button",
                    "id": "a2ec5f3d-6052-482e-91fd-06ff89daa2cb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryTouchContact",
                    "type": "Button",
                    "id": "1f8e19b4-d0d8-4dc5-aa76-23fa501f8ba2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryTouchPosition",
                    "type": "Value",
                    "id": "18033a25-3f11-43fe-8381-7638a07c2725",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondaryTouchContact",
                    "type": "Button",
                    "id": "364b9e96-fa58-4702-bf7d-440d538c0549",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondaryTouchPosition",
                    "type": "Value",
                    "id": "9d45841e-fd34-4f8b-bb96-f374195d3d27",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TertiaryTouchContact",
                    "type": "Button",
                    "id": "c6bdb311-5e96-45cd-82cb-7b8661fa3c21",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TertiaryTouchPosition",
                    "type": "Value",
                    "id": "df0a6801-8f05-4e10-aff5-e8d102a3ccec",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ContextMenu",
                    "type": "Button",
                    "id": "2ea19923-e31c-4400-b75c-c24beda65633",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "deb3549c-3bfb-4a54-b20c-4e2246fa746f",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d638bd5c-edbc-4f46-8b4c-28a246e2e393",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Hold(duration=0.2)",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation Modifier",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6351347c-d50f-4a85-b95c-2de385b2a4c1",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pan Modifier",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "474636b8-6a14-4d1c-bd89-13163a3684d9",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b7db3f12-31d7-4153-9fd4-5f137029a638",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryTouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "32d3233b-2fe3-4661-bb94-707423b92803",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryTouchContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "81242266-74b7-4b36-ba46-817bb8e0dc89",
                    "path": "<Touchscreen>/touch2/delta",
                    "interactions": "",
                    "processors": "ScaleVector2(x=2,y=2)",
                    "groups": "",
                    "action": "TertiaryTouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2388e21c-b7e0-4bc7-805d-d02754705df4",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryTouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ab8a4862-f08d-4502-bae3-4bdbcf8fe419",
                    "path": "<Touchscreen>/touch2/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TertiaryTouchContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "44d53a86-2fbd-480e-b5a3-4527390f3270",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "ContextMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "93275016-8db0-41c6-848e-bbb0435af868",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ContextMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "40188cad-7f17-4d0f-b88f-e0ed874eb0ba",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryTouchContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "a09e7265-8b1f-43ca-8b6e-74724ff34be1",
            "actions": [
                {
                    "name": "Point",
                    "type": "Value",
                    "id": "7dc25b9b-34ea-4076-aee4-c45e9cbb0cde",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "b0611a9e-cff1-4125-bcbd-a64161ef3dc8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PointerMove",
                    "type": "Value",
                    "id": "b1bcae5e-2dc3-41b1-9384-99d95a18f21a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Scroll",
                    "type": "Value",
                    "id": "aab952f5-8ce1-4a0c-b7ab-7695b012f3aa",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PointerClick",
                    "type": "Button",
                    "id": "06efb424-a92b-4c7f-98a8-727bc26fe3b3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f1f7e4ad-7445-4bf5-a908-b34163172a18",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "99ebccbf-1200-4d00-b735-f955c9fdaabd",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "13516236-b7d0-4cc6-8980-e3c4eb95298a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a0c51b37-af66-433e-a3a4-e036a1c97f62",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0c900ee9-8c3d-4fcc-8f9c-f2c0c1ef03f4",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "21ce7ecf-a494-4a13-878b-25c99eab3870",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "ScaleVector2(y=1.75)",
                    "groups": "",
                    "action": "Scroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a2c76de7-09bf-4536-931d-41e8c528c3ea",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "557f138d-c4ad-4d12-b11f-53be8d5504ba",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}